<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="45"
        android:background="@color/black"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_new_item"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="@color/darkGreen"
            android:text="New Item"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_edit_item"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="@color/orange"
            android:text="Edit Item"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="45"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_delete_item"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="@color/violet"
            android:text="Delete Item"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_item_display"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="@color/turquoise"
            android:text="Item List"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/login_register_button_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_login"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:background="@color/even_darkest_gray"
                android:text="Login"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:background="@color/even_darkest_gray"
                android:text="Register"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button_logout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/even_darkest_gray"
            android:text="Logout"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>